# rusty_editor_for_da_moving_pictures

./: Cargo.toml  readme.md
src/: cli.rs  curve.rs  effect.rs  external_program.rs  input_video.rs  main.rs  project.rs  todo.txt  types.rs  useful.rs  video.rs  video_cached_frames.rs  video_export_settings.rs  video_render_settings.rs
src/assets/: assets_path.rs  fonts.rs  mod.rs
src/content/: content.rs  ffmpeg_vid.rs  image.rs  input_video.rs  mod.rs  text.rs
src/files/: file_content_layout.txt  file_handler.rs  frames_exporter.rs  mod.rs  parser_general.rs  parser_v0.md  parser_v0.rs
src/gui/: egui.rs  mod.rs
src/gui/cli/interactive/: mod.rs
src/gui/quick_commands/: mod.rs
src/gui/speedy2d/: content_list.rs  editor_window_settings.rs  layout.rs  mod.rs  request.rs
src/gui/speedy2d/content/: mod.rs  placeholder.rs  video_preview.rs  video_properties_editor.rs  video_tree.rs
src/gui/speedy2d/content/layout/: half.rs  mod.rs
src/gui/speedy2d/content/special/: mod.rs  qvidrunner.rs
src/multithreading/: automatically_cache_frames.rs  mod.rs
